# wager

./: .gitignore  .graphqlconfig.yml  Cargo.toml  README.md  config-overrides.js  package-lock.json  package.json
amplify/: team-provider-info.json
amplify/.config/: project-config.json
amplify/backend/: backend-config.json
backend/: 4.5.0  globals.js  hardhat.config.js  package-lock.json  package.json
backend/contracts/: Wager.sol  WagerFactory.sol  WagerFlow.sol
backend/deployments/: deploy.js
frontend/: .gitignore  package-lock.json  package.json
frontend/public/: index.html  manifest.json
frontend/src/: App.css  App.js  index.js  theme.js  webpack.config.js
program-rust/: instruction.rs  lib.rs  processor.rs  state.rs
public/: index.html
src/: App.css  App.js  Dashboard.js  Header.js  Home.js  Leaderboard.js  Sidebar.js  Signup.js  aws-exports.js  index.css  index.js  temp  theme.js  utils.js  webpack.config.js
src/components/: AccountEditModal.js  AccountInfoModal.js  BetDataModal.js  BetDisplayCards.js  BetInfoModal.js  BoardDisplay.js  Callback.js  ContactForm.js  CreateBetModal.js  CreateLeaderModal.js  FriendsModal.js  Header.js  JoinBetModal.js  JoinLeaderModal.js  LeaderInfoModal.js  Loading.js  Login.js  MakeBetModal.js  NewUserModals.js  Sidebar.js  SignIn.js  Temp.js  Validate.js  WalletEntryModal.js
src/graphql/: mutations.js  queries.js  schema.json  subscriptions.js
src/models/: index.d.ts  index.js  schema.js
src/ui-components/: LeaderboardCreateForm.d.ts  LeaderboardCreateForm.jsx  LeaderboardUpdateForm.d.ts  index.js  (+5 more)
(+64 files in other folders)
